--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "mainClass": "com.handlexer.Main",
             "projectName": "handlexer",
-            "args": ["fulltest.txt"]
+            "args": ["smalltest.txt"]
         }
     ]
 }
